# snakeoil

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
animation/: CMakeLists.txt  api.h  evaluation_result.h  protos.h  result.h  typedefs.h
animation/keyframe/: keyframe.hpp
animation/keyframe_sequence/: linear_keyframe_sequence.hpp
application/: CMakeLists.txt  api.h  protos.h  result.h  system.cpp  system.h  typedefs.h
application/application/: application.h  iapplication.h  window_application.cpp  window_application.h
application/event/: toggle_window.h
application/window/: decorator_window.cpp  decorator_window.h  gapi_info.h  gl_info.h  gl_window.h  irender_context.h  iwindow.h  iwindow_handle.h  iwindow_message_listener.h  render_context_info.h  window.h  window_info.h  window_message.h  window_message_receiver.cpp  window_message_receiver.h
appx/: CMakeLists.txt  api.h  protos.h  result.h  typedefs.h
appx/app/: app.cpp  app.h  iapp.h
appx/application/: appx_application.cpp  appx_application.h
appx/system/: appx_context.cpp  appx_context.h  appx_system.cpp  appx_system.h  event_data.h  iappx_context.h  init_data.h  iwindow_state_informer.h  render_data.h  states.h  update_data.h  window_state_informer.cpp  window_state_informer.h
appx/window/: window_event_manager.cpp  window_event_manager.h  window_state_setter.cpp  window_state_setter.h
audio/: CMakeLists.txt  api.h  object.h  protos.h  result.h  typedefs.h
audio/api/: api_creator.cpp  api_creator.h  api_object.h  api_types.h  iapi.h
audio/buffer/: audio_buffer.cpp  audio_buffer.h  ibuffer.h  loopback_buffer.cpp  loopback_buffer.h  play_buffer.hpp
audio/handler/: handler.h  handler_handle.h  handler_id.h
audiox/: CMakeLists.txt  api.h  protos.h  result.h  typedefs.h
audiox/plug/: iplug.h  iplug_factory.h  plug_result.h
audiox/service/: iglobal_service.h  ilocal_service.h  iuser_data.h  service.cpp  service.h
audiox/system/: audio_system.cpp  audio_system.h
audiox/technique/: api_id.h  audio_technique.cpp  audio_technique.h  technique_id.h  technique_state.h
collide/: CMakeLists.txt  hit_test_types.h  typedefs.h
core/: CMakeLists.txt  assert.h  boolean.h  break_if.hpp  cast.hpp  checks.h  execute_if.hpp  execute_result.h  typedefs.hpp  types.hpp
core/enums/: type_traits.hpp  types.h
core/macros/: common.h  function.h  move.h  typedef.h
core/types/: type_traits.hpp
degui/: CMakeLists.txt  api.h  protos.h  result.h
degui/plugs/: imgui.h  imgui_plug_factory.cpp  imgui_plug_factory.h
degui/system/: system.h
device/: CMakeLists.txt  api.h  global.cpp  global.h  protos.h  result.h  typedefs.h
device/api/: gamepad_notify.h  iapi.h  igamepad_api.h  ikeyboard_api.h  imidi_api.h  imouse_api.h  midi_notify.h
device/component/: iinput_component.h  input_component.h  input_component_type.h  ioutput_component.h  output_component.h  output_component_type.h
device/devices/: idevice.h
device/modules/: igamepad_module.h  imidi_module.h  imodule.h  module_registry.cpp  module_registry.h  module_structs.h  script_type.h
device/system/: device_system.cpp  device_system.h  idevice_system.h
device/vdev/: ivdev.h
dsp/: CMakeLists.txt  api.h  dummy.cpp  protos.h  result.h  typedefs.h
dsp/fft/: fft.hpp
event/: CMakeLists.txt  api.h  protos.h  result.h  typedefs.h
event/events/: ievent.h  itrigger.h  triggers.h
event/manager/: event_manager.cpp  event_manager.h
extensions/: CMakeLists.txt
extensions/project_cars/: CMakeLists.txt  api.h  structs.h  typedefs.h  udp_receiver.cpp  udp_receiver.h
extensions/project_cars2/: CMakeLists.txt  api.h  structs.h  typedefs.h  udp_receiver.cpp  udp_receiver.h
flow/: CMakeLists.txt  api.h  protos.h  result.h  typedefs.h
flow/data/: compatibility_funk.h  data.hpp  generic_funk.h  idata.cpp  idata.h
flow/node/: inode.h  node.cpp  node.h
flow/slot/: iinput_slot.h  ioutput_slot.h  islot.h
flow/variable/: ivariable.h  variable.hpp  variable_set.cpp  variable_set.h
flow/walker/: inode_walker.h  serial_node_walker.cpp  serial_node_walker.h
font/: CMakeLists.txt  api.h  protos.h  result.h  typedefs.h
font/glyph_atlas/: glyph_atlas.cpp  glyph_atlas.h
geometry/: CMakeLists.txt  api.h  protos.h  result.h  typedefs.h
geometry/2d/: circle.hpp  helper.h  quad.hpp  typedefs.h
geometry/3d/: coord_frame.cpp  coord_frame.h  cube.cpp  cube.h  helper.h  plane.cpp  plane.h  rect.cpp  rect.h  tetra.cpp  tetra.h
geometry/enums/: component_formats.h
geometry/mesh/: flat_line_mesh.cpp  flat_line_mesh.h  flat_tri_mesh.cpp  flat_tri_mesh.h  imesh.h  polygon_mesh.cpp  polygon_mesh.h  tri_mesh.cpp  tri_mesh.h
gfx/: CMakeLists.txt  api.h  gfx_config.build.in.h  protos.h  result.h  typedefs.h
gfx/camera/: generic_camera.cpp  generic_camera.h  icamera.h  ilens.h  pinhole_lens.cpp  pinhole_lens.h
gfx/circle/: circle_render_2d.cpp  circle_render_2d.h  circle_render_2d_plug_factory.cpp  circle_render_2d_plug_factory.h  circle_render_2d_shared_data.h
gfx/enums/: align.h
gfx/image/: image_render_2d.cpp  (+4 more)
gli/: CMakeLists.txt  api.h  protos.h  result.h  typedefs.h
gli/gl/: gl.h  (+1 more)
gpu/: CMakeLists.txt  api.h  object.h  protos.h  result.h  state_set.h  typedefs.h
gpx/: CMakeLists.txt  api.h  handle.hpp  protos.h  result.h  typedefs.h
imex/: CMakeLists.txt  api.h  global.cpp  global.h  protos.h  result.h  sync_object.cpp  sync_object.h  typedefs.h
imgui/: CMakeLists.txt  api.h  typedefs.h
io/: CMakeLists.txt  api.h  global.cpp  global.h  io.cpp  io.h  protos.h  result.h  typedefs.h
log/: CMakeLists.txt  api.h  global.cpp  global.h  log.cpp  log.h  log_level.h  protos.h  result.h  typedefs.h
manager/: CMakeLists.txt  api.h  base_manager.hpp  protos.h  result.h  typedefs.h
math/: CMakeLists.txt  constants.h  default_instruction_set.h  typedefs.h
memory/: CMakeLists.txt  allocator.hpp  api.h  global.cpp  global.h  handle.hpp  memory.cpp  memory.h  protos.h  typedefs.h
network/: CMakeLists.txt  api.h  protos.h  result.h  typedefs.h
noise/: CMakeLists.txt  api.h  protos.h  typedefs.h
physics/: CMakeLists.txt  typedefs.h
(+1255 files in other folders)
